[package]
name = "promodoro"
version = "0.1.0"
authors = ["lluz55 <lucas16pe@hotmail.com>"]
edition = "2018"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rust-embed= {version = "5.6.0"}
rocket = "0.4.5"
webview_official = {path = "./webview_rust"}
rand = "0.7"